@@ -1,3 +1,4 @@
+	* fixed bug where setting upload slots to -1 would not mean infinite
 	* extend the UDP tracker protocol to include the request string from the tracker URL
 	* fix mingw build for linux crosscompiler
 
